--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,81 +1,10 @@
-@font-face {
-  font-family: Montserrat Regular;
-  src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
-}
-
-@font-face {
-  font-family: Montserrat Thin;
-  src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
-}
-
 html, body {
-  height: 100%;
   margin: 0;
-  font-family: "Montserrat Regular", "Montserrat Thin", serif;
-  font-size: 15px;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
 }
 
-#root{
-  height: 100%;
-}
-
-.page {
-  background-color: #1c1c1c;
-  display: flex;
-  height: 100%;
-  position: relative;
-  flex-direction: row;
-  flex-grow: 1;
-}
-
-.page-content {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  overflow-y: auto;
-}
-
-.app-title {
-  font-size: 28px;
-  letter-spacing: 6px;
-  padding: 0 20px;
-  text-align: center;
-  color: white;
-  text-decoration: none;
-}
-
-.page-title {
-  font-size: 50px;
-  letter-spacing: 4px;
-  margin: 40px;
-  font-family: "Montserrat Thin", serif;
-}
-
-.page-body {
-  flex-grow: 1;
-}
-
-/* SIDEBAR */
-.pro-sidebar-header {
-  text-decoration: none;
-}
-
-.pro-menu-item {
-  margin: 15px 0 15px 0;
-}
-
-.pro-item-content {
-  position: absolute;
-  margin-left: 40px;
-  transition: font-size 0.1s linear;
-}
-
-.pro-item-content:hover {
-  color: #00FA9A;
-  font-size: 18px;
-}
-
-.pro-sidebar .pro-menu.circle .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
-  background : none;
+.test {
+  color: #d7d7d7;
+  color: #ffffff;
 }
