--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,3 +8,76 @@ html, body {
   color: #d7d7d7;
   color: #ffffff;
 }
+
+.gameBoard {
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+  max-width: 800px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex: 30px 0 0;
+}
+
+.cell {
+  border: 2px solid black;
+}
+
+.cellSize-4 {
+  position: relative;
+  text-align: center;
+  height: 0;
+  width: 20%;
+  padding-bottom: 20%;
+}
+
+.cellSize-5 {
+  position: relative;
+  text-align: center;
+  height: 0;
+  width: 16.67%;
+  padding-bottom: 16.67%;
+}
+
+.cellSize-6 {
+  position: relative;
+  text-align: center;
+  height: 0;
+  width: 14.28%;
+  padding-bottom: 14.28%;
+}
+
+.cellSize-7 {
+  position: relative;
+  text-align: center;
+  height: 0;
+  width: 12.5%;
+  padding-bottom: 12.5%;
+}
+
+.cellValue-0 {
+  background-color: rgb(50, 50, 50);
+}
+
+.cellValue-1 {
+  background: #01a000;
+}
+
+.cellValue-2 {
+  background: rgb(127, 0, 0);
+}
+
+.cellValue-3 {
+  background: rgb(114, 77, 21);
+}
+
+.tentNumberIndicator-number {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  font-size: 4vw;
+}
