--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,86 +2,38 @@ html, body {
   margin: 0;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
+  height: 100%;
+  width: 100%;
 }
 
-.test {
-  color: #d7d7d7;
-  color: #ffffff;
-}
-
-.gameBoard {
+.game_board {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   align-content: stretch;
-  max-width: 800px;
+  align-items: center;
+  max-width: 1000px;
+  height: 100%;
+  width: 100%;
 }
 
 .row {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: row;
+  align-items: center;
   flex: 30px 0 0;
 }
 
 .cell {
   border: 2px solid black;
-}
-
-.cellSize-4 {
   position: relative;
   text-align: center;
-  height: 0;
-  width: 20%;
-  padding-bottom: 20%;
+  width: 100px;
+  height: 100px;
+  padding-bottom: 100px;
 }
-
-.cellSize-5 {
-  position: relative;
-  text-align: center;
-  height: 0;
-  width: 16.67%;
-  padding-bottom: 16.67%;
-}
-
-.cellSize-6 {
-  position: relative;
-  text-align: center;
-  height: 0;
-  width: 14.28%;
-  padding-bottom: 14.28%;
-}
-
-.cellSize-7 {
-  position: relative;
-  text-align: center;
-  height: 0;
-  width: 12.5%;
-  padding-bottom: 12.5%;
-}
-
-.cellSize-8 {
-  position: relative;
-  text-align: center;
-  height: 0;
-  width: 11.11%;
-  padding-bottom: 11.11%;
-}
-
-.cellSize-9 {
-  position: relative;
-  text-align: center;
-  height: 0;
-  width: 10%;
-  padding-bottom: 10%;
-}
-
-.cellSize-10 {
-  position: relative;
-  text-align: center;
-  height: 0;
-  width: 9.091%;
-  padding-bottom: 9.091%;
-}
-
 
 
 .cellValue-0 {
@@ -100,10 +52,18 @@ html, body {
   background: rgb(114, 77, 21);
 }
 
+.tentNumberIndicator{
+  position: relative;
+  text-align: center;
+  width: 100px;
+  height: 100px;
+  padding-bottom: 100px;
+}
+
 .tentNumberIndicator-number {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
-  font-size: 4vw;
+  font-size: 65px;
 }
