--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@ html, body {
   width: 100%;
 }
 
-.game_board {
+.tents_and_tree_game_board {
   display: flex;
   flex-grow: 1;
   flex-direction: column;
@@ -17,7 +17,7 @@ html, body {
   width: 100%;
 }
 
-.row {
+.tents_and_tree_row {
   height: 100%;
   width: 100%;
   display: flex;
@@ -26,7 +26,7 @@ html, body {
   flex: 30px 0 0;
 }
 
-.cell {
+.tents_and_tree_cell {
   border: 2px solid black;
   position: relative;
   text-align: center;
@@ -35,24 +35,23 @@ html, body {
   padding-bottom: 100px;
 }
 
-
-.cellValue-0 {
+.tents_and_tree_cell_value-0 {
   background-color: rgb(50, 50, 50);
 }
 
-.cellValue-1 {
+.tents_and_tree_cell_value-1 {
   background: #01a000;
 }
 
-.cellValue-2 {
+.tents_and_tree_cell_value-2 {
   background: rgb(127, 0, 0);
 }
 
-.cellValue-3 {
+.tents_and_tree_cell_value-3 {
   background: rgb(114, 77, 21);
 }
 
-.tentNumberIndicator{
+.tents_and_tree_tent_number_indicator{
   position: relative;
   text-align: center;
   width: 100px;
@@ -60,7 +59,7 @@ html, body {
   padding-bottom: 100px;
 }
 
-.tentNumberIndicator-number {
+.tents_and_tree_tent_number_indicator-number {
   position: absolute;
   left: 50%;
   top: 50%;
